--- a/package.json
+++ b/package.json
@@ -19,13 +19,13 @@
     "tape": "^4.7.0"
   },
   "repository": {
-    "type": "git",
-    "url": "https://github.com/heroku/node-js-getting-started"
+    "type": "git"
   },
   "keywords": [
     "node",
     "heroku",
     "express"
   ],
+  "author": "Reece jones",
   "license": "MIT"
 }
